fixed compile error after cherry-picking