@@ -24,6 +24,7 @@ import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.collect.Tuple;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
@@ -123,7 +124,7 @@ public interface IndexAbstraction {
 
         @Override
         public List<IndexMetaData> getIndices() {
-            return List.of(concreteIndex);
+            return Collections.singletonList(concreteIndex);
         }
 
         @Override
@@ -186,7 +187,7 @@ public interface IndexAbstraction {
          * and filters)
          */
         public Iterable<Tuple<String, AliasMetaData>> getConcreteIndexAndAliasMetaDatas() {
-            return () -> new Iterator<>() {
+            return () -> new Iterator<Tuple<String, AliasMetaData>>() {
 
                 int index = 0;
 
